--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/PageProperty.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/PageProperty.razor
@@ -9,6 +9,6 @@
 
 @code {
     [Parameter]
-    public PagePropertyBaseModel Model { get; set; }
+    public PagePropertySchema PagePropertySchema { get; set; }
 
 }
