--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/_Imports.razor
@@ -14,4 +14,6 @@
 @using H.LowCode.DesignEngine.Services
 @using H.LowCode.Metadata
 @using Newtonsoft.Json.Schema
-@using H.LowCode.DesignEngine.PropertyModels
+@using H.LowCode.DesignEngine.Components.PropertySchemas
+@using H.LowCode.DesignEngine.Components.Custom.PropertySchemas
+@using H.LowCode.Metadata.Components
