--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
@@ -1,96 +1,96 @@
-﻿@if (DragDropModel != null)
+﻿@if (ComponentSchema != null)
 {
     <div class="componentproperty-item">
         <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
-        <Input TValue="string" @bind-Value="@DragDropModel.Name" />
+        <Input TValue="string" @bind-Value="@ComponentSchema.Name" />
     </div>
     <div class="componentproperty-item">
         <label>标题：</label>
-        <Input TValue="string" @bind-Value="@DragDropModel.ComponentJSchema.Title" />
+        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJSchema.Title" />
     </div>
     <div class="componentproperty-item">
         <label>描述：</label>
-        <Input TValue="string" @bind-Value="@DragDropModel.ComponentJSchema.Description" />
+        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJSchema.Description" />
     </div>
     <div class="componentproperty-item">
         <label>默认值：</label>
-        <Input TValue="string" @bind-Value="@DragDropModel.ComponentPropertyModel.DefaultValue" />
+        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentPropertySchema.DefaultValue" />
     </div>
-    if (DragDropModel.ComponentPropertyModel.IsShowProperty("IsRequired"))
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("IsRequired"))
     {
         <div class="componentproperty-item">
             <label>必填：</label>
-            <Checkbox @bind-Value="@DragDropModel.ComponentPropertyModel.IsRequired" />
+            <Checkbox @bind-Value="@ComponentSchema.ComponentPropertySchema.IsRequired" />
         </div>
     }
     @*"type": "string"*@
-    if(DragDropModel.ComponentJSchema.Type == JSchemaType.String)
+    if(ComponentSchema.ComponentJSchema.Type == JSchemaType.String)
     {
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("MaximumLength"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MaximumLength"))
         {
             <div class="componentproperty-item">
                 <label>最大长度：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.MaximumLength" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.MaximumLength" />
             </div>
         }
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("MinimumLength"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MinimumLength"))
         {
             <div class="componentproperty-item">
                 <label>最小长度：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.MinimumLength" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.MinimumLength" />
             </div>
         }
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("Pattern"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Pattern"))
         {
             <div class="componentproperty-item">
                 <label>Pattern：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.Pattern" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Pattern" />
             </div>
         }
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("Format"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Format"))
         {
             <div class="componentproperty-item">
                 <label>Format：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.Format" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Format" />
             </div>
         }
     }
     @*"type": "integer"*@
     @*"type": "number"*@
-    if (DragDropModel.ComponentJSchema.Type == JSchemaType.Integer || DragDropModel.ComponentJSchema.Type == JSchemaType.Number)
+    if (ComponentSchema.ComponentJSchema.Type == JSchemaType.Integer || ComponentSchema.ComponentJSchema.Type == JSchemaType.Number)
     {
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("Maximum"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Maximum"))
         {
             <div class="componentproperty-item">
                 <label>最大值：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.Maximum" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Maximum" />
             </div>
         }
-        if (DragDropModel.ComponentPropertyModel.IsShowProperty("Minimum"))
+        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Minimum"))
         {
             <div class="componentproperty-item">
                 <label>最小值：</label>
-                <Input @bind-Value="@DragDropModel.ComponentJSchema.Minimum" />
+                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Minimum" />
             </div>
         }
     }
     @*"type": "array"*@
-    @*if(DragDropModel.ComponentJSchema.Type == JSchemaType.Array)
+    @*if(ComponentSchema.ComponentJSchema.Type == JSchemaType.Array)
     {
         
     }*@
     @*自定义*@
     <div class="componentproperty-item">
         <label>元素宽度：</label>
-        <Slider TValue="double" @bind-Value="@DragDropModel.ComponentPropertyModel.ItemWidth" DefaultValue="180" Max="300" />
+        <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.ItemWidth" DefaultValue="180" Max="300" />
     </div>
     <div class="componentproperty-item">
         <label>标签宽度：</label>
-        <Slider TValue="double" @bind-Value="@DragDropModel.ComponentPropertyModel.LabelWidth" DefaultValue="180" Max="300" />
+        <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.LabelWidth" DefaultValue="180" Max="300" />
     </div>
 }
 
 @code {
     [Parameter]
-    public DragDropModel DragDropModel { get; set; }
+    public ComponentSchema ComponentSchema { get; set; }
 }
