--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -30,7 +30,7 @@
             </div>
         }
         <div class="dropitem-title">@ComponentSchema.ComponentJSchema.Title ：</div>
-        <div class="dropitem-div">@ComponentSchema.DropRenderFragment</div>
+        <div class="dropitem-div">@ComponentSchema.ComponentRenderFragment</div>
     </div>
 </div>
 
