添加DDD相关项目

--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -29,7 +29,7 @@
                 </div>
             </div>
         }
-        <div class="dropitem-title">@ComponentSchema.ComponentJSchema.Title ：</div>
+        <div class="dropitem-title">@ComponentSchema.ComponentJsonSchema.Title ：</div>
         <div class="dropitem-div">@ComponentSchema.ComponentRenderFragment</div>
     </div>
 </div>
