--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DragItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DragItem.razor
@@ -1,5 +1,5 @@
 ﻿<div draggable="true" class="dragitem" @ondragstart="()=>OnDragStart(ComponentSchema)" @onclick="()=>OnClick(ComponentSchema)">
-    @ComponentSchema.ComponentJSchema.Title
+    @ComponentSchema.ComponentJsonSchema.Title
 </div>
 
 @code
