--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/Pages/DesignPage.razor
@@ -74,7 +74,7 @@
         rootJSchema.Type = JSchemaType.Object;
         foreach(var dropComponent in ComponentSchemas)
         {
-            rootJSchema.Properties[dropComponent.Name] = dropComponent.ComponentJSchema;
+            rootJSchema.Properties[dropComponent.Name] = dropComponent.ComponentJsonSchema;
         }
         return rootJSchema;
     }
