--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
@@ -1,96 +1,104 @@
-﻿@if (ComponentSchema != null)
+﻿<div class="componentproperty-item">
+    <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
+    <Input TValue="string" @bind-Value="@ComponentSchema.Name" />
+</div>
+<div class="componentproperty-item">
+    <label>标题：</label>
+    <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Title" />
+</div>
+<div class="componentproperty-item">
+    <label>描述：</label>
+    <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Description" />
+</div>
+<div class="componentproperty-item">
+    <label>默认值：</label>
+    <Input TValue="string" @bind-Value="@ComponentSchema.ComponentPropertySchema.DefaultValue" />
+</div>
+@if (ComponentSchema.ComponentPropertySchema.IsShowProperty("IsRequired"))
 {
     <div class="componentproperty-item">
-        <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
-        <Input TValue="string" @bind-Value="@ComponentSchema.Name" />
-    </div>
-    <div class="componentproperty-item">
-        <label>标题：</label>
-        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJSchema.Title" />
-    </div>
-    <div class="componentproperty-item">
-        <label>描述：</label>
-        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJSchema.Description" />
-    </div>
-    <div class="componentproperty-item">
-        <label>默认值：</label>
-        <Input TValue="string" @bind-Value="@ComponentSchema.ComponentPropertySchema.DefaultValue" />
-    </div>
-    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("IsRequired"))
-    {
-        <div class="componentproperty-item">
-            <label>必填：</label>
-            <Checkbox @bind-Value="@ComponentSchema.ComponentPropertySchema.IsRequired" />
-        </div>
-    }
-    @*"type": "string"*@
-    if(ComponentSchema.ComponentJSchema.Type == JSchemaType.String)
-    {
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MaximumLength"))
-        {
-            <div class="componentproperty-item">
-                <label>最大长度：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.MaximumLength" />
-            </div>
-        }
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MinimumLength"))
-        {
-            <div class="componentproperty-item">
-                <label>最小长度：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.MinimumLength" />
-            </div>
-        }
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Pattern"))
-        {
-            <div class="componentproperty-item">
-                <label>Pattern：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Pattern" />
-            </div>
-        }
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Format"))
-        {
-            <div class="componentproperty-item">
-                <label>Format：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Format" />
-            </div>
-        }
-    }
-    @*"type": "integer"*@
-    @*"type": "number"*@
-    if (ComponentSchema.ComponentJSchema.Type == JSchemaType.Integer || ComponentSchema.ComponentJSchema.Type == JSchemaType.Number)
-    {
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Maximum"))
-        {
-            <div class="componentproperty-item">
-                <label>最大值：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Maximum" />
-            </div>
-        }
-        if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Minimum"))
-        {
-            <div class="componentproperty-item">
-                <label>最小值：</label>
-                <Input @bind-Value="@ComponentSchema.ComponentJSchema.Minimum" />
-            </div>
-        }
-    }
-    @*"type": "array"*@
-    @*if(ComponentSchema.ComponentJSchema.Type == JSchemaType.Array)
-    {
-        
-    }*@
-    @*自定义*@
-    <div class="componentproperty-item">
-        <label>元素宽度：</label>
-        <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.ItemWidth" DefaultValue="180" Max="300" />
-    </div>
-    <div class="componentproperty-item">
-        <label>标签宽度：</label>
-        <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.LabelWidth" DefaultValue="180" Max="300" />
+        <label>必填：</label>
+        <Checkbox @bind-Value="@ComponentSchema.ComponentPropertySchema.IsRequired" />
     </div>
 }
+
+@*"type": "string"*@
+@if(ComponentSchema.ComponentJsonSchema.Type == JSchemaType.String)
+{
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MaximumLength"))
+    {
+        <div class="componentproperty-item">
+            <label>最大长度：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.MaximumLength" />
+        </div>
+    }
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MinimumLength"))
+    {
+        <div class="componentproperty-item">
+            <label>最小长度：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.MinimumLength" />
+        </div>
+    }
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Pattern"))
+    {
+        <div class="componentproperty-item">
+            <label>Pattern：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Pattern" />
+        </div>
+    }
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Format"))
+    {
+        <div class="componentproperty-item">
+            <label>Format：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Format" />
+        </div>
+    }
+}
+
+@*"type": "integer"*@
+@*"type": "number"*@
+@if (ComponentSchema.ComponentJsonSchema.Type == JSchemaType.Integer || ComponentSchema.ComponentJsonSchema.Type == JSchemaType.Number)
+{
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Maximum"))
+    {
+        <div class="componentproperty-item">
+            <label>最大值：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Maximum" />
+        </div>
+    }
+    if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Minimum"))
+    {
+        <div class="componentproperty-item">
+            <label>最小值：</label>
+            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Minimum" />
+        </div>
+    }
+}
+@*"type": "array"*@
+@*if(ComponentSchema.ComponentJSchema.Type == JSchemaType.Array)
+{
+        
+}*@
+
+@*自定义*@
+<div class="componentproperty-item">
+    <label>元素宽度：</label>
+    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.ItemWidth" DefaultValue="180" Max="300" />
+</div>
+<div class="componentproperty-item">
+    <label>标签宽度：</label>
+    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.LabelWidth" DefaultValue="180" Max="300" />
+</div>
 
 @code {
     [Parameter]
     public ComponentSchema ComponentSchema { get; set; }
+
+    protected override void OnParametersSet()
+    {
+        base.OnParametersSet();
+
+        if (ComponentSchema == null)
+            throw new NullReferenceException($"{ComponentSchema} is null");
+    }
 }
