--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/wwwroot/designerengine.css
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/wwwroot/designerengine.css
@@ -27,18 +27,30 @@
     }
 
 /* ================== DropItem.razor ==================== */
+.dropitem-box {
+    height: 85px;
+    border: #f0f2f5 solid 2px;
+}
 .dropitem {
     position: relative;
     display: flex;
     height: 80px;
     margin: 1px;
     padding: 20px 8px 5px 8px;
-    border: #dddddd dashed 1px;
+    border: #ffffff solid 2px;
     background-color: #ffffff;
 }
 
 .dropitem-selected {
     outline: #1890ff solid 2px;
+}
+
+.dropitem-border-top {
+    border-top: 2px dashed #1890ff;
+}
+
+.dropitem-border-bottom {
+    border-bottom: 2px dashed #1890ff;
 }
 
 .dropitem-title {
