--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DropItem.razor
@@ -1,26 +1,26 @@
 ﻿@inject DragDropService DragDropService
 
-<div style="height:85px; opacity:@ComponentSchema.Opacity; @Style @ComponentSchema.Style">
-    <div class="dropitem @ClassMapper.Class" 
-        @ondragstart="()=>OnDragStart(ComponentSchema)" 
-        @ondragenter="()=>OnDragEnter(ComponentSchema)" 
-        @ondragover:preventDefault @ondragover:stopPropagation @ondragover="(e)=>OnDragOver(ComponentSchema, e)" 
-        @ondragleave="()=>OnDragLeave()" 
-        @onclick="()=>OnClick(ComponentSchema)" @onclick:stopPropagation>
+<div class="dropitem-box" style="opacity:@ComponentSchema.Opacity; @Style">
+    <div class="dropitem @DropItemClassMapper.Class" style="@ComponentSchema.Style"
+        @ondragstart="OnDragStart" 
+        @ondragenter="OnDragEnter" 
+        @ondragover:preventDefault @ondragover:stopPropagation @ondragover="(e)=>OnDragOver(e)" 
+        @ondragleave="OnDragLeave" 
+        @onclick="OnClick" @onclick:stopPropagation>
         @if (ComponentSchema.IsSelected)
         {
             <div draggable="true" class="dropitem-icon-move">
                 <svg viewBox="64 64 896 896" focusable="false" data-icon="drag" width="1em" height="1em" fill="currentColor" aria-hidden="true"><path d="M909.3 506.3L781.7 405.6a7.23 7.23 0 00-11.7 5.7V476H548V254h64.8c6 0 9.4-7 5.7-11.7L517.7 114.7a7.14 7.14 0 00-11.3 0L405.6 242.3a7.23 7.23 0 005.7 11.7H476v222H254v-64.8c0-6-7-9.4-11.7-5.7L114.7 506.3a7.14 7.14 0 000 11.3l127.5 100.8c4.7 3.7 11.7.4 11.7-5.7V548h222v222h-64.8c-6 0-9.4 7-5.7 11.7l100.8 127.5c2.9 3.7 8.5 3.7 11.3 0l100.8-127.5c3.7-4.7.4-11.7-5.7-11.7H548V548h222v64.8c0 6 7 9.4 11.7 5.7l127.5-100.8a7.3 7.3 0 00.1-11.4z"></path></svg>
             </div>
             <div class="dropitem-pointer-wrapper">
-                <div class="dropitem-pointer" @onclick="()=>OnDelete(ComponentSchema)">
+                <div class="dropitem-pointer" @onclick="OnDelete">
                     <span role="img">
                         <svg viewBox="64 64 896 896" focusable="false" data-icon="delete" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                             <path d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"></path>
                         </svg>
                     </span>
                 </div>
-                <div class="dropitem-pointer" @onclick="()=>OnCopy(ComponentSchema)">
+                <div class="dropitem-pointer" @onclick="OnCopy">
                     <span role="img">
                         <svg viewBox="64 64 896 896" focusable="false" data-icon="copy" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                             <path d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"></path>
@@ -49,9 +49,9 @@
     public Action<ComponentSchema> OnItemCopy { get; set; }
 
     [Parameter]
-    public string Style { get; set; }
+    public string Style{ get; set; }
 
-    protected ClassMapper ClassMapper { get; } = new ClassMapper();
+    protected ClassMapper DropItemClassMapper { get; } = new ClassMapper();
 
     protected override void OnInitialized()
     {
@@ -62,50 +62,38 @@
 
     private void SetClassMap()
     {
-        ClassMapper.Clear()
+        DropItemClassMapper.Clear()
             .If("dropitem-selected", () => ComponentSchema.IsSelected);
     }
 
-    private void OnClick(ComponentSchema clickComponentSchema)
+    private void OnClick()
     {
-        OnItemClick.Invoke(clickComponentSchema);
-        BlazorEventDispatcher.Dispatch("designerengine.dropitem.onclick", clickComponentSchema);
+        OnItemClick.Invoke(ComponentSchema);
+        BlazorEventDispatcher.Dispatch("designerengine.dropitem.onclick", ComponentSchema);
     }
 
-    private void OnDragStart(ComponentSchema dragStartComponentSchema)
+    private void OnDragStart()
     {
-        dragStartComponentSchema.Opacity = 0.2;
-        DragDropService.CurrentDragComponent = dragStartComponentSchema;
+        ComponentSchema.Opacity = 0.2;
+        DragDropService.CurrentDragComponent = ComponentSchema;
     }
 
-    private void OnDragEnter(ComponentSchema dragEnterComponentSchema)
+    private void OnDragEnter()
     {
-        //如果当前被拖拽的组件和拖拽到上面的组件是同一个，直接返回
-        if (DragDropService.CurrentDragComponent == dragEnterComponentSchema)
-            return;
-
-        if (DragDropService.LastDragOverComponent != null && dragEnterComponentSchema == DragDropService.LastDragOverComponent)
-            return;
-
-        DragDropService.LastDragOverComponent = dragEnterComponentSchema;
+        DragDropService.LastDragOverComponent = ComponentSchema;
     }
 
-    private void OnDragOver(ComponentSchema dragOverComponentSchema, DragEventArgs dragEventArgs)
+    private void OnDragOver(DragEventArgs dragEventArgs)
     {
-        //如果当前被拖拽的组件和拖拽到上面的组件是同一个，直接返回
-        if (DragDropService.CurrentDragComponent == dragOverComponentSchema)
-            return;
-
-        //如果拖拽到上面的组件和上一个组件是同一个，直接返回
-        //if (DragDropService.LastDragOverComponent != null && DragDropService.LastDragOverComponent == dragOverComponentSchema)
-        //    return;
-
         //设置移动位置样式，拖拽到目标元素上半部分时，上方添加红色边框，下半部分时下方添加红色边框
-        //if (dragEventArgs.OffsetY < 30)
-        //    dragOverComponentSchema.Style = "border-top: 3px solid red;";
-        //else
-        //    dragOverComponentSchema.Style = "border-bottom: 3px solid red;";
-        dragOverComponentSchema.Style = "border-bottom: 2px dashed #1890ff;";
+        if (dragEventArgs.OffsetY < 30){
+            ComponentSchema.Style = "border-top: 2px dashed #1890ff;";
+            ComponentSchema.IsDroppedToBack = false;
+        }
+        else{
+            ComponentSchema.Style = "border-bottom: 2px dashed #1890ff;";
+            ComponentSchema.IsDroppedToBack = true;
+        }
     }
 
     private void OnDragLeave()
@@ -117,13 +105,13 @@
         ComponentSchema.Style = string.Empty;
     }
 
-    private void OnDelete(ComponentSchema componentSchema)
+    private void OnDelete()
     {
-        OnItemDelete.Invoke(componentSchema);
+        OnItemDelete.Invoke(ComponentSchema);
     }
 
-    private void OnCopy(ComponentSchema componentSchema)
+    private void OnCopy()
     {
-        OnItemCopy.Invoke(componentSchema);
+        OnItemCopy.Invoke(ComponentSchema);
     }
 }
