--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/PropertyPanel.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/PropertyPanel.razor
@@ -28,7 +28,7 @@
     private void RegisterEventDispatcher()
     {
         //订阅设计面板中的组件点击事件
-        BlazorEventDispatcher.AddAction("designerengine.dropitem.onclick", (value) =>
+        BlazorEventDispatcher.RegisterEvent("designerengine.dropitem.onclick", (value) =>
         {
             ComponentSchema = (ComponentSchema)value;
             ShowPropertyPanel = true;
@@ -37,7 +37,7 @@
         });
 
         //订阅设计面板取消选中事件
-        BlazorEventDispatcher.AddAction("designerengine.dropitem.onblur", (value) =>
+        BlazorEventDispatcher.RegisterEvent("designerengine.dropitem.onblur", (value) =>
         {
             ComponentSchema = null;
             ShowPropertyPanel = false;
