--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/DesignPanel/DesignPanel.razor
@@ -12,7 +12,7 @@
 
     @foreach (var component in ComponentSchemas)
     {
-        <DropItem @ref="currentDropItem" ComponentSchema="component" Style="width:50%; float:left;" 
+        <DropItem @ref="currentDropItem" ComponentSchema="component" 
             OnItemClick="OnItemClick" OnItemDelete="OnItemDelete" OnItemCopy="OnItemCopy">
         </DropItem>
     }
@@ -108,14 +108,14 @@
     private void RegisterEventDispatcher()
     {
         //订阅左侧组件面板中的组件点击事件
-        BlazorEventDispatcher.AddAction("designerengine.dragitem.onclick", (value) =>
+        BlazorEventDispatcher.RegisterEvent("designerengine.dragitem.onclick", (value) =>
         {
             DragDropService.DragItem_Add(ComponentSchemas, (ComponentSchema)value);
             StateHasChanged();
         });
 
         //订阅设计面板取消选中事件
-        BlazorEventDispatcher.AddAction("designerengine.dropitem.onblur", (value) =>
+        BlazorEventDispatcher.RegisterEvent("designerengine.dropitem.onblur", (value) =>
         {
         //取消选中项
         if (DragDropService.LastSelectedComponent != null)
