--- a/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
+++ b/src/H.LowCode.DesignEngine/H.LowCode.DesignEngine/PropertyPanel/ComponentProperty.razor
@@ -1,10 +1,10 @@
 ﻿<div class="componentproperty-item">
     <label>Name <span style="font-size:10px; color:gray;">(字段名称/英文)</span>：</label>
-    <Input TValue="string" @bind-Value="@ComponentSchema.Name" />
+    <Input TValue="string" @bind-Value="@ComponentSchema.Name" OnChange="(value) => OnPropertyChange()" />
 </div>
 <div class="componentproperty-item">
     <label>标题：</label>
-    <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Title" />
+    <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Title" OnChange="(value) => OnPropertyChange()" />
 </div>
 <div class="componentproperty-item">
     <label>描述：</label>
@@ -18,7 +18,7 @@
 {
     <div class="componentproperty-item">
         <label>必填：</label>
-        <Checkbox @bind-Value="@ComponentSchema.ComponentPropertySchema.IsRequired" />
+        <Checkbox @bind-Value="@ComponentSchema.ComponentPropertySchema.IsRequired" OnChange="(value) => OnPropertyChange()" />
     </div>
 }
 
@@ -29,28 +29,28 @@
     {
         <div class="componentproperty-item">
             <label>最大长度：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.MaximumLength" />
+            <Input TValue="long?" @bind-Value="@ComponentSchema.ComponentJsonSchema.MaximumLength" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
     if (ComponentSchema.ComponentPropertySchema.IsShowProperty("MinimumLength"))
     {
         <div class="componentproperty-item">
             <label>最小长度：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.MinimumLength" />
+            <Input TValue="long?" @bind-Value="@ComponentSchema.ComponentJsonSchema.MinimumLength" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
     if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Pattern"))
     {
         <div class="componentproperty-item">
             <label>Pattern：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Pattern" />
+            <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Pattern" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
     if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Format"))
     {
         <div class="componentproperty-item">
             <label>Format：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Format" />
+            <Input TValue="string" @bind-Value="@ComponentSchema.ComponentJsonSchema.Format" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
 }
@@ -63,14 +63,14 @@
     {
         <div class="componentproperty-item">
             <label>最大值：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Maximum" />
+            <Input TValue="double?" @bind-Value="@ComponentSchema.ComponentJsonSchema.Maximum" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
     if (ComponentSchema.ComponentPropertySchema.IsShowProperty("Minimum"))
     {
         <div class="componentproperty-item">
             <label>最小值：</label>
-            <Input @bind-Value="@ComponentSchema.ComponentJsonSchema.Minimum" />
+            <Input TValue="double?" @bind-Value="@ComponentSchema.ComponentJsonSchema.Minimum" OnChange="(value) => OnPropertyChange()" />
         </div>
     }
 }
@@ -82,12 +82,12 @@
 
 @*自定义*@
 <div class="componentproperty-item">
-    <label>元素宽度：</label>
-    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.ItemWidth" DefaultValue="180" Max="300" />
+    <label>组件宽度：</label>
+    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.ItemWidth" DefaultValue="12" Min="4" Max="24" OnChange="(value) => OnPropertyChange()" />
 </div>
 <div class="componentproperty-item">
     <label>标签宽度：</label>
-    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.LabelWidth" DefaultValue="180" Max="300" />
+    <Slider TValue="double" @bind-Value="@ComponentSchema.ComponentPropertySchema.LabelWidth" DefaultValue="180" Min="4" Max="300" OnChange="(value) => OnPropertyChange()" />
 </div>
 
 @code {
@@ -100,5 +100,10 @@
 
         if (ComponentSchema == null)
             throw new NullReferenceException($"{ComponentSchema} is null");
+    }
+
+    private void OnPropertyChange()
+    {
+        BlazorEventDispatcher.Dispatch("designerengine.componentproperty.onchange", null);
     }
 }
